Updating Feature on Projects

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "@tabler/icons": "^1.119.0",
-        "axios": "^1.2.3",
+        "axios": "^1.3.3",
+        "bootstrap": "^5.2.3",
         "clsx": "^1.2.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
